#ifndef __CHESSCOLOUR_H_
#define __CHESSCOLOUR_H_

namespace chesspp {

enum ChessColour { Black, White };

static const char *ChessColourNames[] = {"B", "W"};

} // namespace chesspp

#endif // __CHESSCOLOUR_H_
